--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-joblib==1.2.0
-matplotlib==3.5.3
-numpy==1.23.5
-pandas==1.4.3
-scikit-base==0.5.0
+joblib
+matplotlib
+numpy
+pandas
 scikit-learn==1.2.0
